feat : add create duplicate word dictionary for Problem6 with docs complete